# raiko

./: .env  .gitignore  .gitmodules  BLOB_ENCODING.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-new.zk  Dockerfile.mock  Dockerfile.zk  README.md  chain_spec_list_default.json  deploy-zisk-prover.sh  makefile
.cargo/: config.toml
.github/workflows/: ci-all.yml  ci-build-test-reusable.yml  ci-integration-reusable.yml  ci-provers.yml  ci-tdx-all.yml  ci-zisk.yml  raiko-client--docker-build.yml  raiko-client-sgx--docker-build.yml  raiko-client-sp1--docker-build.yml  raiko-client-zk--docker-build.yml  repo--merge-gatekeeper.yml  repo--release-please.yml
ballot/: Cargo.toml
ballot/src/: lib.rs
core/: Cargo.toml
core/benches/: proving.rs
core/benches/fixtures/: batch_input.json  shasta_agg_input.json
core/src/: interfaces.rs  lib.rs  mock_prover.rs  prover.rs
core/src/preflight/: lru.rs  mod.rs  util.rs
core/src/preflight/util/: blobs.rs  mod.rs  ontake.rs  pacaya.rs  shasta.rs
core/src/provider/: db.rs  mod.rs  rpc.rs
docker/: .env.sample  .env.sample.zk  docker-compose-devnet.yml  docker-compose-zk.yml  docker-compose.yml  entrypoint.sh
docs/: api.md
host/: Cargo.toml
host/config/: chain_spec_list_default.json  chain_spec_list_devnet.json  config.devnet.json  config.json  config.sgx.json  config.taiko_hekla.json  config.taiko_mainnet.json  config.tdx.json
host/config/devnet/: chain_spec_list.json  chain_spec_list_default.json  config.json
host/config/hoodi/: config.json
host/config/testnet/: chain_spec_list.json  config.json
host/src/: cache.rs  lib.rs  proof.rs
host/src/server/: handler.rs  mod.rs  utils.rs
host/src/server/api/: admin.rs  mod.rs  public.rs
host/src/server/api/admin/: apikey.rs
host/src/server/api/v1/: guest_data.rs  mod.rs  proof.rs
host/src/server/api/v2/: mod.rs
host/src/server/api/v2/proof/: cancel.rs  mod.rs  report.rs
host/src/server/api/v3/proof/: batch.rs  batch_handler.rs  cancel.rs  mod.rs  realtime_handler.rs  shasta_handler.rs
host/tests/common/: request.rs  server.rs
host/tests/test/: admin_test.rs  manual_test.rs  prove_test.rs
lib/: Cargo.toml  build.rs
lib/src/: anchor.rs  block_executor.rs  builder.rs  consts.rs  evm.rs  input.rs  lib.rs  libhash.rs  mem_db.rs  proof_type.rs  protocol_instance.rs  prover.rs
lib/src/block_executor/: l1sload_inspector.rs  mod.rs
lib/src/builder/: block_executor.rs  consensus.rs  mod.rs
lib/src/builder/block_executor/: l1sload_inspector.rs  mod.rs
lib/src/input/: realtime.rs  shasta.rs
lib/src/l1_precompiles/: l1sload.rs  l1staticcall.rs  mod.rs  witness_db.rs
lib/src/manifest/: codec.rs  types.rs
lib/src/primitives/: eip4844.rs  mod.rs  mpt.rs  witness.rs
lib/src/privacy/: aes.rs  ecies.rs  mod.rs
lib/src/utils/: pacaya.rs  realtime.rs  shasta.rs  shasta_rules.rs  taiko_test.json  test.json  txs.rs
pipeline/: Cargo.toml
pipeline/src/: executor.rs
provers/risc0/builder/src/: main.rs
provers/risc0/driver/: Cargo.toml
provers/risc0/driver/src/: bonsai.rs  boundless.rs  lib.rs  snarks.rs
provers/risc0/driver/src/methods/: boundless_aggregation.rs  boundless_batch.rs  boundless_shasta_aggregation.rs  ecdsa.rs  mod.rs  risc0_aggregation.rs  risc0_batch.rs  risc0_guest.rs  risc0_shasta_aggregation.rs  sha256.rs  test_risc0_batch.rs
provers/risc0/guest/: Cargo.toml
provers/risc0/guest/src/: batch.rs  block.rs  boundless_agg.rs  boundless_batch.rs  boundless_shasta_aggregation.rs  main.rs  shasta_aggregation.rs
provers/sgx/config/: sgx-guest.docker.manifest.template
provers/sgx/guest/: Cargo.toml
provers/sgx/guest/src/: app_args.rs  one_shot.rs  sgx_server.rs  signature.rs
provers/sgx/prover/src/: lib.rs  local_prover.rs  remote_prover.rs  sgx_register_utils.rs
provers/sgx/setup/: Cargo.toml
provers/sgx/setup/src/: setup_bootstrap.rs
provers/sp1/builder/src/: main.rs
provers/sp1/driver/: .env  Cargo.toml
provers/sp1/driver/src/: lib.rs
provers/sp1/driver/src/proof_verify/: remote_contract_verify.rs
provers/sp1/guest/: Cargo.toml
provers/sp1/guest/elf/: sp1-aggregation  sp1-shasta-aggregation
provers/sp1/guest/src/: aggregation.rs  batch.rs  main.rs
provers/tdx/: Cargo.toml
provers/tdx/prover/: Cargo.toml
provers/tdx/prover/src/: attestation.rs  attestation_client.rs  config.rs  lib.rs  proof.rs  signature.rs
provers/tdx/src/: lib.rs
provers/zisk/agent/: Cargo.toml  build.sh
provers/zisk/agent/driver/: Cargo.toml
provers/zisk/agent/driver/src/: agent.rs
provers/zisk/agent/guest/: Cargo.toml
provers/zisk/agent/guest/elf/: zisk-aggregation  zisk-shasta-aggregation
provers/zisk/agent/guest/patches/sha3/: Cargo.toml
provers/zisk/agent/guest/src/: aggregation.rs  batch.rs  precompile_shims.rs  shasta_aggregation.rs  zisk_crypto.rs
provers/zisk/agent/k256/: Cargo.toml
provers/zisk/agent/k256/src/: ecdsa.rs  lib.rs  zisk.rs
provers/zisk/agent/k256/src/arithmetic/: affine.rs  field.rs  mul.rs  projective.rs  scalar.rs
provers/zisk/agent/k256_2/: Cargo.toml
provers/zisk/agent/k256_2/src/: lib.rs
provers/zisk/agent/k256_2/src/arithmetic/: field.rs  scalar.rs
provers/zisk/agent/k256_3/: Cargo.toml
provers/zisk/agent/k256_3/src/: zisk.rs
provers/zisk/agent/k256_test/src/: lib.rs
provers/zisk/builder/: Cargo.toml
provers/zisk/builder/src/: main.rs
provers/zisk/driver/: Cargo.toml
provers/zisk/driver/src/: agent.rs
provers/zisk/guest/: Cargo.toml
provers/zisk/guest/elf/: zisk-aggregation  zisk-shasta-aggregation
reqactor/: Cargo.toml
reqactor/src/: actor.rs  backend.rs  gpu_semaphore.rs  lib.rs  queue.rs
reqpool/src/: memory_backend.rs  request.rs
script/: build-guest-with-hashes.sh  build.sh  cancel-block.sh  install-zisk-deps.sh  install.sh  integration.sh  prepare-deploy.sh  prove-aggregation-blocks.sh  prove-block.sh  prove-shasta.sh  prove.sh  publish-image.sh  setup-bonsai.sh  setup-workspace.sh  stress_batch.py  stress_shasta_proposal.py  test_aggregation_priority.py  update_env.sh  update_imageid.sh
taskdb/src/: lib.rs
(+13 files in other folders)
