[package]
name = "raiko-ballot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true, features = ["now"] }
raiko-lib = { workspace = true }
tracing = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
