[workspace]

[package]
name = "risc0-guest"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "risc0-aggregation"
path = "src/aggregation.rs"

[[bin]]
name = "risc0-batch"
path = "src/batch.rs"

[[bin]]
name = "sha256"
path = "src/benchmark/sha256.rs"

[[bin]]
name = "ecdsa"
path = "src/benchmark/ecdsa.rs"

[dependencies]
raiko-lib = { path = "../../../lib", features = ["std", "risc0"] }
risc0-zkvm = { version = "=2.1.0", default-features = false, features = [
    'std',
    "getrandom",
    "heap-embedded-alloc",
    "unstable",
] }
risc0-zkvm-platform = { version = "=2.0.2", default-features = false, features = [
    "sys-getenv",
] }
harness-core = { path = "../../../harness/core" }
harness = { path = "../../../harness/macro", features = ["risc0"] }
revm-precompile = { version = "26.0.0", default-features = false, features = [
    "std",
    "c-kzg",
] }
# Explicitly adding c-kzg with feature eip-7594 to fix 
# error[E0599]: no method named `compute_cells_and_kzg_proofs` found for reference `&KzgSettings` in the current scope
# in alloy-eips
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "c-kzg/v2.1.1-risczero.2", features = [
    "eip-7594",
] }
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.14-risczero.2" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }

[patch.crates-io]
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "c-kzg/v2.1.1-risczero.2" }
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.14-risczero.2" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
