[workspace]

[package]
name = "risc0-guest"
version = "0.1.0"
edition = "2021"


# deprecated binary target for ontake fork block processing
# [[bin]]
# name = "risc0-block"
# path = "src/block.rs"

[[bin]]
name = "risc0-aggregation"
path = "src/aggregation.rs"

[[bin]]
name = "risc0-batch"
path = "src/batch.rs"

[[bin]]
name = "boundless-aggregation"
path = "src/boundless_agg.rs"

[[bin]]
name = "boundless-batch"
path = "src/boundless_batch.rs"

[[bin]]
name = "boundless-shasta-aggregation"
path = "src/boundless_shasta_aggregation.rs"

[[bin]]
name = "risc0-shasta-aggregation"
path = "src/shasta_aggregation.rs"

[dependencies]
raiko-lib = { path = "../../../lib", features = ["std", "risc0"] }
risc0-zkvm = { version = "=3.0.3", default-features = false, features = [
    'std',
    "getrandom",
    "heap-embedded-alloc",
    "unstable",
] }
risc0-zkvm-platform = { version = "=2.2.1", default-features = false, features = [
    "sys-getenv",
] }
harness-core = { path = "../../../harness/core" }
harness = { path = "../../../harness/macro", features = ["risc0"] }
revm-precompile = { version = "26.0.0", default-features = false, features = [
    "std",
    "c-kzg",
] }
# Explicitly adding c-kzg with feature eip-7594 to fix 
# error[E0599]: no method named `compute_cells_and_kzg_proofs` found for reference `&KzgSettings` in the current scope
# in alloy-eips
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.5-risczero.0", features = [
    "eip-7594",
] }
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.15-risczero.1" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.0" }
bincode = { version = "1.3.3" }

[patch.crates-io]
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.5-risczero.0" }
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.15-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", tag = "v0.6.0-risczero.0" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
