[package]
name = "tdx-prover"
version = "0.1.0"
edition = "2021"

[lib]
name = "tdx_prover"
path = "src/lib.rs"

[dependencies]
raiko-lib = { workspace = true, features = ["std"], optional = true }

# Crypto
secp256k1 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true, optional = true }

# Logging
tracing = { workspace = true, optional = true }

# Path and file handling
dirs = { workspace = true, optional = true }

# For instance ID
uuid = { version = "1.10", features = ["v4", "serde"], optional = true }

# Azure TDX attestation
az-tdx-vtpm = { version = "0.7.1", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { workspace = true, optional = true }

[features]
default = []
enable = [
    "raiko-lib", "secp256k1", "hex", "sha3", "serde", "serde_json", 
    "bincode", "tokio", "tracing", "dirs", "uuid", "az-tdx-vtpm", 
    "sha2", "rand"
]
