[package]
name = "zisk-agent-driver"
version = "0.1.0"
edition = "2021"
description = "ZISK agent HTTP client driver for Raiko integration"

[features]
enable = []

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }

# Minimal external dependencies to avoid conflicts
async-trait = "0.1"
thiserror = { workspace = true }
once_cell = "1"
bytemuck = "1"

# Raiko lib dependency (path relative to driver directory)
raiko-lib = { path = "../../../../lib", features = ["std"] }

# Zisk SDK and related dependencies
# NOTE: zisk deps use pre-develop-0.16.0-stream branch,
# and proofman branch must match what that zisk branch uses (pre-develop-0.16.0).
zisk-sdk = { git = "https://github.com/0xPolygonHermez/zisk.git", branch = "pre-develop-0.16.0-stream" }
zisk-common = { git = "https://github.com/0xPolygonHermez/zisk.git", branch = "pre-develop-0.16.0-stream" }
proofman = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-0.16.0" }
proofman-common = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-0.16.0" }
fields = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-0.16.0" }
rom-setup = { git = "https://github.com/0xPolygonHermez/zisk.git", branch = "pre-develop-0.16.0-stream" }
