[package]
name = "zisk-agent-driver"
version = "0.1.0"
edition = "2021"
description = "ZISK agent HTTP client driver for Raiko integration"

[features]
enable = ["gpu"]
gpu = ["zisk-sdk/gpu"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }

# Minimal external dependencies to avoid conflicts
async-trait = "0.1"
thiserror = { workspace = true }
once_cell = "1"
bytemuck = "1"
libc = "0.2"

# Raiko lib dependency (path relative to driver directory)
raiko-lib = { path = "../../../../lib", features = ["std"] }

# Zisk SDK and related dependencies
# zisk: pinned to pre-develop-0.16.0 @ 6668726
# proofman: use branch to match zisk's internal deps (avoids duplicate crate resolution)
zisk-sdk = { git = "https://github.com/0xPolygonHermez/zisk.git", rev = "6668726" }
zisk-common = { git = "https://github.com/0xPolygonHermez/zisk.git", rev = "6668726" }
fields = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-0.16.0" }

[[bin]]
name = "dump-proof"
path = "src/bin/dump_proof.rs"
