
[package]
name = "zisk-guest"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[[bin]]
name = "zisk-batch"
path = "src/batch.rs"

[[bin]]
name = "zisk-aggregation"
path = "src/aggregation.rs"

[[bin]]
name = "zisk-shasta-aggregation"
path = "src/shasta_aggregation.rs"

[dependencies]
# Core Zisk runtime
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", rev = "6668726" }

# Raiko library - all reth/revm/alloy deps come transitively through this
raiko-lib = { path = "../../../../lib", default-features = false, features = [
    "std",
    "zisk",
] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "1.3", default-features = false }

c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.5-risczero.0", features = [
    "eip-7594",
] }


blst = { git = "https://github.com/0xPolygonHermez/zisk-patch-blst.git", tag = "patch-0.3.15-zisk-0.15.0" }
# blst = { git = "https://github.com/risc0/blst", tag = "v0.3.15-risczero.1" }

[patch.crates-io]
# No-op c-kzg replacement: Zisk cannot compile C libraries
# c-kzg = { path = "../../../../lib/no-op-kzg" }

c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.5-risczero.0" }
blst = { git = "https://github.com/0xPolygonHermez/zisk-patch-blst.git", tag = "patch-0.3.15-zisk-0.15.0" }

tiny-keccak = { git = "https://github.com/0xPolygonHermez/zisk-patch-tiny-keccak.git", tag = "patch-2.0.2-zisk-0.15.0" }
sha2 = { git = "https://github.com/0xPolygonHermez/zisk-patch-hashes.git", tag = "patch-sha2-0.10.9-zisk-0.15.0" }
sha3 = { git = "https://github.com/0xPolygonHermez/zisk-patch-hashes.git", tag = "patch-sha3-0.10.8-zisk-0.15.0" }
k256 = { git = "https://github.com/0xPolygonHermez/zisk-patch-elliptic-curves.git", tag = "patch-k256-0.13.4-zisk-0.15.0" }
substrate-bn = { git = "https://github.com/0xPolygonHermez/zisk-patch-bn.git", tag = "patch-0.6.0-zisk-0.15.0" }
