
[package]
name = "zisk-guest"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[[bin]]
name = "zisk-batch"
path = "src/batch.rs"

[[bin]]
name = "zisk-aggregation"
path = "src/aggregation.rs"

[[bin]]
name = "zisk-shasta-aggregation"
path = "src/shasta_aggregation.rs"

[dependencies]
# Core Zisk runtime — v0.16.0 provides native precompile support
# (keccak256, sha256, secp256k1 ECDSA, BLS12-381 KZG) via zisklib,
# so no patch crates are needed for these.
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.16.0" }

# Raiko library - all reth/revm/alloy deps come transitively through this
raiko-lib = { path = "../../../../lib", default-features = false, features = [
    "std",
    "zisk",
] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "1.3", default-features = false }

# KZG precompile: c-kzg still needed for EIP-4844 point evaluation (revm dep).
# blst patched for zisk target (C cross-compilation).
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.5-risczero.0", features = [
    "eip-7594",
] }
blst = { git = "https://github.com/0xPolygonHermez/zisk-patch-blst.git", tag = "patch-0.3.15-zisk-0.15.0" }

[patch.crates-io]
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.5-risczero.0" }
blst = { git = "https://github.com/0xPolygonHermez/zisk-patch-blst.git", tag = "patch-0.3.15-zisk-0.15.0" }

# v0.16.0: patch crates no longer needed — ziskos provides native implementations:
# - tiny-keccak → ziskos::zisklib::keccak256 (exports native_keccak256 #[no_mangle])
# - sha2 → ziskos::zisklib::sha256 (exports sha256_c #[no_mangle])
# - sha3 → not needed (keccak handled by ziskos)
# - k256 → ziskos::zisklib::secp256k1 (exports secp256k1_ecdsa_*_c #[no_mangle])
# - ruint → standard crate, no patch needed
# - substrate-bn → ziskos::zisklib::bn254 (native bn254 support)
